# lstm

./: .gitignore  CMakeLists.txt  log1  log2  lstm.cbp  play1.h  play2.h
misc/: data  dataSet.csv  加法门和乘法门(1).docx  多项式逼近系数.docx  绘图.xlsx
src/: cacu.cpp  check.cpp  global.cpp  global.h  lstm.cpp  lstm.h  matrix.cpp  matrix.h  mulgate.cpp  mulgate.h  network.cpp  network.h  share.cpp  test1.cpp  test2.cpp  triples.cpp  triples.h  triplesCheck.cpp  triplesGen.cpp  triplescheck.h
src/triplesCheck/: triplesCheck.cpp
temp/: client.h  play1.cpp  play1.h  play2.cpp  play2.h  server.h
